tool/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> file_input_end
Rule 1     file_input_end -> declaration file_input ENDMARKER
Rule 2     file_input -> file_input NEWLINE
Rule 3     file_input -> file_input stmt
Rule 4     file_input -> NEWLINE
Rule 5     file_input -> stmt
Rule 6     declaration -> IMAGE NAME NAME ASSIGN STRING NEWLINE
Rule 7     funcdef -> DEF NAME parameters COLON suite
Rule 8     parameters -> LPAR RPAR
Rule 9     parameters -> LPAR varargslist RPAR
Rule 10    varargslist -> varargslist COMMA NAME
Rule 11    varargslist -> NAME
Rule 12    stmt -> simple_stmt
Rule 13    stmt -> compound_stmt
Rule 14    simple_stmt -> small_stmts NEWLINE
Rule 15    simple_stmt -> small_stmts SEMICOLON NEWLINE
Rule 16    small_stmts -> small_stmts SEMICOLON small_stmt
Rule 17    small_stmts -> small_stmt
Rule 18    small_stmt -> flow_stmt
Rule 19    small_stmt -> expr_stmt
Rule 20    expr_stmt -> testlist ASSIGN testlist
Rule 21    expr_stmt -> testlist
Rule 22    flow_stmt -> return_stmt
Rule 23    return_stmt -> RETURN testlist
Rule 24    compound_stmt -> if_stmt
Rule 25    compound_stmt -> funcdef
Rule 26    if_stmt -> IF test COLON suite
Rule 27    suite -> simple_stmt
Rule 28    suite -> NEWLINE INDENT stmts DEDENT
Rule 29    stmts -> stmts stmt
Rule 30    stmts -> stmt
Rule 31    comparison -> comparison PLUS comparison
Rule 32    comparison -> comparison MINUS comparison
Rule 33    comparison -> comparison MULT comparison
Rule 34    comparison -> comparison DIV comparison
Rule 35    comparison -> comparison LT comparison
Rule 36    comparison -> comparison EQ comparison
Rule 37    comparison -> comparison GT comparison
Rule 38    comparison -> PLUS comparison
Rule 39    comparison -> MINUS comparison
Rule 40    comparison -> power
Rule 41    power -> atom
Rule 42    power -> atom trailer
Rule 43    atom -> NAME
Rule 44    atom -> NUMBER
Rule 45    atom -> STRING
Rule 46    atom -> LPAR testlist RPAR
Rule 47    trailer -> LPAR arglist RPAR
Rule 48    testlist -> testlist_multi COMMA
Rule 49    testlist -> testlist_multi
Rule 50    testlist_multi -> testlist_multi COMMA test
Rule 51    testlist_multi -> test
Rule 52    test -> comparison
Rule 53    arglist -> arglist COMMA argument
Rule 54    arglist -> argument
Rule 55    argument -> test

Terminals, with rules where they appear

ASSIGN               : 6 20
COLON                : 7 26
COMMA                : 10 48 50 53
DEDENT               : 28
DEF                  : 7
DIV                  : 34
ENDMARKER            : 1
EQ                   : 36
GT                   : 37
IF                   : 26
IMAGE                : 6
INDENT               : 28
LPAR                 : 8 9 46 47
LT                   : 35
MINUS                : 32 39
MULT                 : 33
NAME                 : 6 6 7 10 11 43
NEWLINE              : 2 4 6 14 15 28
NUMBER               : 44
PLUS                 : 31 38
RETURN               : 23
RPAR                 : 8 9 46 47
SEMICOLON            : 15 16
STRING               : 6 45
WS                   : 
error                : 

Nonterminals, with rules where they appear

arglist              : 47 53
argument             : 53 54
atom                 : 41 42
comparison           : 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 52
compound_stmt        : 13
declaration          : 1
expr_stmt            : 19
file_input           : 1 2 3
file_input_end       : 0
flow_stmt            : 18
funcdef              : 25
if_stmt              : 24
parameters           : 7
power                : 40
return_stmt          : 22
simple_stmt          : 12 27
small_stmt           : 16 17
small_stmts          : 14 15 16
stmt                 : 3 5 29 30
stmts                : 28 29
suite                : 7 26
test                 : 26 50 51 55
testlist             : 20 20 21 23 46
testlist_multi       : 48 49 50
trailer              : 42
varargslist          : 9 10

Parsing method: LALR

state 0

    (0) S' -> . file_input_end
    (1) file_input_end -> . declaration file_input ENDMARKER
    (6) declaration -> . IMAGE NAME NAME ASSIGN STRING NEWLINE

    IMAGE           shift and go to state 1

    file_input_end                 shift and go to state 3
    declaration                    shift and go to state 2

state 1

    (6) declaration -> IMAGE . NAME NAME ASSIGN STRING NEWLINE

    NAME            shift and go to state 4


state 2

    (1) file_input_end -> declaration . file_input ENDMARKER
    (2) file_input -> . file_input NEWLINE
    (3) file_input -> . file_input stmt
    (4) file_input -> . NEWLINE
    (5) file_input -> . stmt
    (12) stmt -> . simple_stmt
    (13) stmt -> . compound_stmt
    (14) simple_stmt -> . small_stmts NEWLINE
    (15) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (24) compound_stmt -> . if_stmt
    (25) compound_stmt -> . funcdef
    (16) small_stmts -> . small_stmts SEMICOLON small_stmt
    (17) small_stmts -> . small_stmt
    (26) if_stmt -> . IF test COLON suite
    (7) funcdef -> . DEF NAME parameters COLON suite
    (18) small_stmt -> . flow_stmt
    (19) small_stmt -> . expr_stmt
    (22) flow_stmt -> . return_stmt
    (20) expr_stmt -> . testlist ASSIGN testlist
    (21) expr_stmt -> . testlist
    (23) return_stmt -> . RETURN testlist
    (48) testlist -> . testlist_multi COMMA
    (49) testlist -> . testlist_multi
    (50) testlist_multi -> . testlist_multi COMMA test
    (51) testlist_multi -> . test
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    NEWLINE         shift and go to state 14
    IF              shift and go to state 17
    DEF             shift and go to state 12
    RETURN          shift and go to state 10
    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    flow_stmt                      shift and go to state 13
    comparison                     shift and go to state 28
    if_stmt                        shift and go to state 29
    simple_stmt                    shift and go to state 21
    file_input                     shift and go to state 30
    atom                           shift and go to state 7
    testlist                       shift and go to state 22
    stmt                           shift and go to state 23
    testlist_multi                 shift and go to state 24
    small_stmt                     shift and go to state 6
    power                          shift and go to state 20
    test                           shift and go to state 16
    return_stmt                    shift and go to state 9
    funcdef                        shift and go to state 25
    expr_stmt                      shift and go to state 26
    compound_stmt                  shift and go to state 18
    small_stmts                    shift and go to state 31

state 3

    (0) S' -> file_input_end .



state 4

    (6) declaration -> IMAGE NAME . NAME ASSIGN STRING NEWLINE

    NAME            shift and go to state 32


state 5

    (46) atom -> LPAR . testlist RPAR
    (48) testlist -> . testlist_multi COMMA
    (49) testlist -> . testlist_multi
    (50) testlist_multi -> . testlist_multi COMMA test
    (51) testlist_multi -> . test
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 28
    power                          shift and go to state 20
    testlist                       shift and go to state 33
    testlist_multi                 shift and go to state 24
    atom                           shift and go to state 7
    test                           shift and go to state 16

state 6

    (17) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 17 (small_stmts -> small_stmt .)
    SEMICOLON       reduce using rule 17 (small_stmts -> small_stmt .)


state 7

    (41) power -> atom .
    (42) power -> atom . trailer
    (47) trailer -> . LPAR arglist RPAR

    PLUS            reduce using rule 41 (power -> atom .)
    MINUS           reduce using rule 41 (power -> atom .)
    MULT            reduce using rule 41 (power -> atom .)
    DIV             reduce using rule 41 (power -> atom .)
    LT              reduce using rule 41 (power -> atom .)
    EQ              reduce using rule 41 (power -> atom .)
    GT              reduce using rule 41 (power -> atom .)
    COMMA           reduce using rule 41 (power -> atom .)
    ASSIGN          reduce using rule 41 (power -> atom .)
    NEWLINE         reduce using rule 41 (power -> atom .)
    SEMICOLON       reduce using rule 41 (power -> atom .)
    RPAR            reduce using rule 41 (power -> atom .)
    COLON           reduce using rule 41 (power -> atom .)
    LPAR            shift and go to state 34

    trailer                        shift and go to state 35

state 8

    (44) atom -> NUMBER .

    LPAR            reduce using rule 44 (atom -> NUMBER .)
    PLUS            reduce using rule 44 (atom -> NUMBER .)
    MINUS           reduce using rule 44 (atom -> NUMBER .)
    MULT            reduce using rule 44 (atom -> NUMBER .)
    DIV             reduce using rule 44 (atom -> NUMBER .)
    LT              reduce using rule 44 (atom -> NUMBER .)
    EQ              reduce using rule 44 (atom -> NUMBER .)
    GT              reduce using rule 44 (atom -> NUMBER .)
    RPAR            reduce using rule 44 (atom -> NUMBER .)
    COMMA           reduce using rule 44 (atom -> NUMBER .)
    NEWLINE         reduce using rule 44 (atom -> NUMBER .)
    SEMICOLON       reduce using rule 44 (atom -> NUMBER .)
    ASSIGN          reduce using rule 44 (atom -> NUMBER .)
    COLON           reduce using rule 44 (atom -> NUMBER .)


state 9

    (22) flow_stmt -> return_stmt .

    NEWLINE         reduce using rule 22 (flow_stmt -> return_stmt .)
    SEMICOLON       reduce using rule 22 (flow_stmt -> return_stmt .)


state 10

    (23) return_stmt -> RETURN . testlist
    (48) testlist -> . testlist_multi COMMA
    (49) testlist -> . testlist_multi
    (50) testlist_multi -> . testlist_multi COMMA test
    (51) testlist_multi -> . test
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 28
    power                          shift and go to state 20
    testlist                       shift and go to state 36
    testlist_multi                 shift and go to state 24
    atom                           shift and go to state 7
    test                           shift and go to state 16

state 11

    (39) comparison -> MINUS . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 37
    power                          shift and go to state 20
    atom                           shift and go to state 7

state 12

    (7) funcdef -> DEF . NAME parameters COLON suite

    NAME            shift and go to state 38


state 13

    (18) small_stmt -> flow_stmt .

    NEWLINE         reduce using rule 18 (small_stmt -> flow_stmt .)
    SEMICOLON       reduce using rule 18 (small_stmt -> flow_stmt .)


state 14

    (4) file_input -> NEWLINE .

    ENDMARKER       reduce using rule 4 (file_input -> NEWLINE .)
    NEWLINE         reduce using rule 4 (file_input -> NEWLINE .)
    IF              reduce using rule 4 (file_input -> NEWLINE .)
    DEF             reduce using rule 4 (file_input -> NEWLINE .)
    RETURN          reduce using rule 4 (file_input -> NEWLINE .)
    PLUS            reduce using rule 4 (file_input -> NEWLINE .)
    MINUS           reduce using rule 4 (file_input -> NEWLINE .)
    NAME            reduce using rule 4 (file_input -> NEWLINE .)
    NUMBER          reduce using rule 4 (file_input -> NEWLINE .)
    STRING          reduce using rule 4 (file_input -> NEWLINE .)
    LPAR            reduce using rule 4 (file_input -> NEWLINE .)


state 15

    (38) comparison -> PLUS . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 39
    power                          shift and go to state 20
    atom                           shift and go to state 7

state 16

    (51) testlist_multi -> test .

    COMMA           reduce using rule 51 (testlist_multi -> test .)
    ASSIGN          reduce using rule 51 (testlist_multi -> test .)
    NEWLINE         reduce using rule 51 (testlist_multi -> test .)
    SEMICOLON       reduce using rule 51 (testlist_multi -> test .)
    RPAR            reduce using rule 51 (testlist_multi -> test .)


state 17

    (26) if_stmt -> IF . test COLON suite
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 28
    power                          shift and go to state 20
    atom                           shift and go to state 7
    test                           shift and go to state 40

state 18

    (13) stmt -> compound_stmt .

    ENDMARKER       reduce using rule 13 (stmt -> compound_stmt .)
    NEWLINE         reduce using rule 13 (stmt -> compound_stmt .)
    IF              reduce using rule 13 (stmt -> compound_stmt .)
    DEF             reduce using rule 13 (stmt -> compound_stmt .)
    RETURN          reduce using rule 13 (stmt -> compound_stmt .)
    PLUS            reduce using rule 13 (stmt -> compound_stmt .)
    MINUS           reduce using rule 13 (stmt -> compound_stmt .)
    NAME            reduce using rule 13 (stmt -> compound_stmt .)
    NUMBER          reduce using rule 13 (stmt -> compound_stmt .)
    STRING          reduce using rule 13 (stmt -> compound_stmt .)
    LPAR            reduce using rule 13 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 13 (stmt -> compound_stmt .)


state 19

    (45) atom -> STRING .

    LPAR            reduce using rule 45 (atom -> STRING .)
    PLUS            reduce using rule 45 (atom -> STRING .)
    MINUS           reduce using rule 45 (atom -> STRING .)
    MULT            reduce using rule 45 (atom -> STRING .)
    DIV             reduce using rule 45 (atom -> STRING .)
    LT              reduce using rule 45 (atom -> STRING .)
    EQ              reduce using rule 45 (atom -> STRING .)
    GT              reduce using rule 45 (atom -> STRING .)
    RPAR            reduce using rule 45 (atom -> STRING .)
    COMMA           reduce using rule 45 (atom -> STRING .)
    NEWLINE         reduce using rule 45 (atom -> STRING .)
    SEMICOLON       reduce using rule 45 (atom -> STRING .)
    ASSIGN          reduce using rule 45 (atom -> STRING .)
    COLON           reduce using rule 45 (atom -> STRING .)


state 20

    (40) comparison -> power .

    PLUS            reduce using rule 40 (comparison -> power .)
    MINUS           reduce using rule 40 (comparison -> power .)
    MULT            reduce using rule 40 (comparison -> power .)
    DIV             reduce using rule 40 (comparison -> power .)
    LT              reduce using rule 40 (comparison -> power .)
    EQ              reduce using rule 40 (comparison -> power .)
    GT              reduce using rule 40 (comparison -> power .)
    RPAR            reduce using rule 40 (comparison -> power .)
    COMMA           reduce using rule 40 (comparison -> power .)
    ASSIGN          reduce using rule 40 (comparison -> power .)
    NEWLINE         reduce using rule 40 (comparison -> power .)
    SEMICOLON       reduce using rule 40 (comparison -> power .)
    COLON           reduce using rule 40 (comparison -> power .)


state 21

    (12) stmt -> simple_stmt .

    ENDMARKER       reduce using rule 12 (stmt -> simple_stmt .)
    NEWLINE         reduce using rule 12 (stmt -> simple_stmt .)
    IF              reduce using rule 12 (stmt -> simple_stmt .)
    DEF             reduce using rule 12 (stmt -> simple_stmt .)
    RETURN          reduce using rule 12 (stmt -> simple_stmt .)
    PLUS            reduce using rule 12 (stmt -> simple_stmt .)
    MINUS           reduce using rule 12 (stmt -> simple_stmt .)
    NAME            reduce using rule 12 (stmt -> simple_stmt .)
    NUMBER          reduce using rule 12 (stmt -> simple_stmt .)
    STRING          reduce using rule 12 (stmt -> simple_stmt .)
    LPAR            reduce using rule 12 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 12 (stmt -> simple_stmt .)


state 22

    (20) expr_stmt -> testlist . ASSIGN testlist
    (21) expr_stmt -> testlist .

    ASSIGN          shift and go to state 41
    NEWLINE         reduce using rule 21 (expr_stmt -> testlist .)
    SEMICOLON       reduce using rule 21 (expr_stmt -> testlist .)


state 23

    (5) file_input -> stmt .

    ENDMARKER       reduce using rule 5 (file_input -> stmt .)
    NEWLINE         reduce using rule 5 (file_input -> stmt .)
    IF              reduce using rule 5 (file_input -> stmt .)
    DEF             reduce using rule 5 (file_input -> stmt .)
    RETURN          reduce using rule 5 (file_input -> stmt .)
    PLUS            reduce using rule 5 (file_input -> stmt .)
    MINUS           reduce using rule 5 (file_input -> stmt .)
    NAME            reduce using rule 5 (file_input -> stmt .)
    NUMBER          reduce using rule 5 (file_input -> stmt .)
    STRING          reduce using rule 5 (file_input -> stmt .)
    LPAR            reduce using rule 5 (file_input -> stmt .)


state 24

    (48) testlist -> testlist_multi . COMMA
    (49) testlist -> testlist_multi .
    (50) testlist_multi -> testlist_multi . COMMA test

    COMMA           shift and go to state 42
    ASSIGN          reduce using rule 49 (testlist -> testlist_multi .)
    NEWLINE         reduce using rule 49 (testlist -> testlist_multi .)
    SEMICOLON       reduce using rule 49 (testlist -> testlist_multi .)
    RPAR            reduce using rule 49 (testlist -> testlist_multi .)


state 25

    (25) compound_stmt -> funcdef .

    ENDMARKER       reduce using rule 25 (compound_stmt -> funcdef .)
    NEWLINE         reduce using rule 25 (compound_stmt -> funcdef .)
    IF              reduce using rule 25 (compound_stmt -> funcdef .)
    DEF             reduce using rule 25 (compound_stmt -> funcdef .)
    RETURN          reduce using rule 25 (compound_stmt -> funcdef .)
    PLUS            reduce using rule 25 (compound_stmt -> funcdef .)
    MINUS           reduce using rule 25 (compound_stmt -> funcdef .)
    NAME            reduce using rule 25 (compound_stmt -> funcdef .)
    NUMBER          reduce using rule 25 (compound_stmt -> funcdef .)
    STRING          reduce using rule 25 (compound_stmt -> funcdef .)
    LPAR            reduce using rule 25 (compound_stmt -> funcdef .)
    DEDENT          reduce using rule 25 (compound_stmt -> funcdef .)


state 26

    (19) small_stmt -> expr_stmt .

    NEWLINE         reduce using rule 19 (small_stmt -> expr_stmt .)
    SEMICOLON       reduce using rule 19 (small_stmt -> expr_stmt .)


state 27

    (43) atom -> NAME .

    LPAR            reduce using rule 43 (atom -> NAME .)
    PLUS            reduce using rule 43 (atom -> NAME .)
    MINUS           reduce using rule 43 (atom -> NAME .)
    MULT            reduce using rule 43 (atom -> NAME .)
    DIV             reduce using rule 43 (atom -> NAME .)
    LT              reduce using rule 43 (atom -> NAME .)
    EQ              reduce using rule 43 (atom -> NAME .)
    GT              reduce using rule 43 (atom -> NAME .)
    RPAR            reduce using rule 43 (atom -> NAME .)
    COMMA           reduce using rule 43 (atom -> NAME .)
    NEWLINE         reduce using rule 43 (atom -> NAME .)
    SEMICOLON       reduce using rule 43 (atom -> NAME .)
    ASSIGN          reduce using rule 43 (atom -> NAME .)
    COLON           reduce using rule 43 (atom -> NAME .)


state 28

    (52) test -> comparison .
    (31) comparison -> comparison . PLUS comparison
    (32) comparison -> comparison . MINUS comparison
    (33) comparison -> comparison . MULT comparison
    (34) comparison -> comparison . DIV comparison
    (35) comparison -> comparison . LT comparison
    (36) comparison -> comparison . EQ comparison
    (37) comparison -> comparison . GT comparison

    RPAR            reduce using rule 52 (test -> comparison .)
    COMMA           reduce using rule 52 (test -> comparison .)
    ASSIGN          reduce using rule 52 (test -> comparison .)
    NEWLINE         reduce using rule 52 (test -> comparison .)
    SEMICOLON       reduce using rule 52 (test -> comparison .)
    COLON           reduce using rule 52 (test -> comparison .)
    PLUS            shift and go to state 45
    MINUS           shift and go to state 48
    MULT            shift and go to state 49
    DIV             shift and go to state 46
    LT              shift and go to state 44
    EQ              shift and go to state 47
    GT              shift and go to state 43


state 29

    (24) compound_stmt -> if_stmt .

    ENDMARKER       reduce using rule 24 (compound_stmt -> if_stmt .)
    NEWLINE         reduce using rule 24 (compound_stmt -> if_stmt .)
    IF              reduce using rule 24 (compound_stmt -> if_stmt .)
    DEF             reduce using rule 24 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 24 (compound_stmt -> if_stmt .)
    PLUS            reduce using rule 24 (compound_stmt -> if_stmt .)
    MINUS           reduce using rule 24 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 24 (compound_stmt -> if_stmt .)
    NUMBER          reduce using rule 24 (compound_stmt -> if_stmt .)
    STRING          reduce using rule 24 (compound_stmt -> if_stmt .)
    LPAR            reduce using rule 24 (compound_stmt -> if_stmt .)
    DEDENT          reduce using rule 24 (compound_stmt -> if_stmt .)


state 30

    (1) file_input_end -> declaration file_input . ENDMARKER
    (2) file_input -> file_input . NEWLINE
    (3) file_input -> file_input . stmt
    (12) stmt -> . simple_stmt
    (13) stmt -> . compound_stmt
    (14) simple_stmt -> . small_stmts NEWLINE
    (15) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (24) compound_stmt -> . if_stmt
    (25) compound_stmt -> . funcdef
    (16) small_stmts -> . small_stmts SEMICOLON small_stmt
    (17) small_stmts -> . small_stmt
    (26) if_stmt -> . IF test COLON suite
    (7) funcdef -> . DEF NAME parameters COLON suite
    (18) small_stmt -> . flow_stmt
    (19) small_stmt -> . expr_stmt
    (22) flow_stmt -> . return_stmt
    (20) expr_stmt -> . testlist ASSIGN testlist
    (21) expr_stmt -> . testlist
    (23) return_stmt -> . RETURN testlist
    (48) testlist -> . testlist_multi COMMA
    (49) testlist -> . testlist_multi
    (50) testlist_multi -> . testlist_multi COMMA test
    (51) testlist_multi -> . test
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    ENDMARKER       shift and go to state 50
    NEWLINE         shift and go to state 51
    IF              shift and go to state 17
    DEF             shift and go to state 12
    RETURN          shift and go to state 10
    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    flow_stmt                      shift and go to state 13
    comparison                     shift and go to state 28
    if_stmt                        shift and go to state 29
    simple_stmt                    shift and go to state 21
    atom                           shift and go to state 7
    testlist                       shift and go to state 22
    stmt                           shift and go to state 52
    testlist_multi                 shift and go to state 24
    small_stmt                     shift and go to state 6
    power                          shift and go to state 20
    test                           shift and go to state 16
    return_stmt                    shift and go to state 9
    funcdef                        shift and go to state 25
    expr_stmt                      shift and go to state 26
    compound_stmt                  shift and go to state 18
    small_stmts                    shift and go to state 31

state 31

    (14) simple_stmt -> small_stmts . NEWLINE
    (15) simple_stmt -> small_stmts . SEMICOLON NEWLINE
    (16) small_stmts -> small_stmts . SEMICOLON small_stmt

    NEWLINE         shift and go to state 53
    SEMICOLON       shift and go to state 54


state 32

    (6) declaration -> IMAGE NAME NAME . ASSIGN STRING NEWLINE

    ASSIGN          shift and go to state 55


state 33

    (46) atom -> LPAR testlist . RPAR

    RPAR            shift and go to state 56


state 34

    (47) trailer -> LPAR . arglist RPAR
    (53) arglist -> . arglist COMMA argument
    (54) arglist -> . argument
    (55) argument -> . test
    (52) test -> . comparison
    (31) comparison -> . comparison PLUS comparison
    (32) comparison -> . comparison MINUS comparison
    (33) comparison -> . comparison MULT comparison
    (34) comparison -> . comparison DIV comparison
    (35) comparison -> . comparison LT comparison
    (36) comparison -> . comparison EQ comparison
    (37) comparison -> . comparison GT comparison
    (38) comparison -> . PLUS comparison
    (39) comparison -> . MINUS comparison
    (40) comparison -> . power
    (41) power -> . atom
    (42) power -> . atom trailer
    (43) atom -> . NAME
    (44) atom -> . NUMBER
    (45) atom -> . STRING
    (46) atom -> . LPAR testlist RPAR

    PLUS            shift and go to state 15
    MINUS           shift and go to state 11
    NAME            shift and go to state 27
    NUMBER          shift and go to state 8
    STRING          shift and go to state 19
    LPAR            shift and go to state 5

    comparison                     shift and go to state 28
    power                          shift and go to state 20
    argument                       shift and go to state 57
    atom                           shift and go to state 7
    test                           shift and go to state 58
    arglist                        shift and go to state 59

state 35

    (42) power -> atom trailer .

    PLUS            reduce using rule 42 (power -> atom trailer .)
    MINUS           reduce using rule 42 (power -> atom trailer .)
    MULT            reduce using rule 42 (power -> atom trailer .)
    DIV             reduce using rule 42 (power -> atom trailer .)
    LT              reduce using rule 42 (power -> atom trailer .)
    EQ              reduce using rule 42 (power -> atom trailer .)
    GT              reduce using rule 42 (power -> atom trailer .)
    COMMA           reduce using rule 42 (power -> atom trailer .)
    ASSIGN          reduce using rule 42 (power -> atom trailer .)
    NEWLINE         reduce using rule 42 (power -> atom trailer .)
    SEMICOLON       reduce using rule 42 (power -> atom trailer .)
    RPAR            reduce using rule 42 (power -> atom trailer .)
    COLON           reduce using rule 42 (power -> atom trailer .)


state 36

    (23) return_stmt -> RETURN testlist .

    NEWLINE         reduce using rule 23 (return_stmt -> RETURN testlist .)
    SEMICOLON       reduce using rule 23 (return_stmt -> RETURN testlist .)


state 37

    (39) comparison -> MINUS comparison .
    (31) comparison -> comparison . PLUS comparison
    (32) comparison -> comparison . MINUS comparison
    (33) comparison -> comparison . MULT comparison
    (34) comparison -> comparison . DIV comparison
    (35) comparison -> comparison . LT comparison
    (36) comparison -> comparison . EQ comparison
    (37) comparison -> comparison . GT comparison

    PLUS            reduce using rule 39 (comparison -> MINUS comparison .)
    MINUS           reduce using rule 39 (comparison -> MINUS comparison .)
    LT              reduce using rule 39 (comparison -> MINUS comparison .)
    EQ              reduce using rule 39 (comparison -> MINUS comparison .)
    GT              reduce using rule 39 (comparison -> MINUS comparison .)
    RPAR            reduce using rule 39 (comparison -> MINUS comparison .)
    COMMA           reduce using rule 39 (comparison -> MINUS comparison .)
    ASSIGN          reduce using rule 39 (comparison -> MINUS comparison .)
    NEWLINE         reduce using rule 39 (comparison -> MINUS comparison .)
    SEMICOLON       reduce using rule 39 (comparison -> MINUS comparison .)
    COLON           reduce using rule 39 (comparison -> MINUS comparison .)
    MULT            shift and go to state 49
    DIV             shift and go to state 46

  ! MULT            [ reduce using rule 39 (comparison -> MINUS comparison .) ]
  ! DIV             [ reduce using rule 39 (comparison -> MINUS comparison .) ]
  ! PLUS            [ shift and go to state 45 ]
  ! MINUS           [ shift and go to state 48 ]
  ! LT              [ shift and go to state 44 ]
  ! EQ              [ shift and go to state 47 ]
  ! GT              [ shift and go to state 43 ]


state 38

    (7) funcdef -> DEF NAME . parameters COLON suite
    (8) parameters -> . LPAR RPAR
    (9) parameters -> . LPAR varargslist RPAR

    LPAR            shift and go to state 60

    parameters                     shift and go to state 61

state 39

    (38) comparison -> PLUS comparison .
    (31) comparison -> comparison . PLUS comparison
    (32) comparison -> comparison . MINUS comparison
    (33) comparison -> comparison . MULT comparison
    (34) comparison -> comparison . DIV comparison
    (35) comparison -> comparison . LT comparison
    (36) comparison -> comparison . EQ comparison
    (37) comparison -> comparison . GT comparison

    PLUS            reduce using rule 38 (comparison -> PLUS comparison .)
    MINUS           reduce using rule 38 (comparison -> PLUS comparison .)
    LT              reduce using rule 38 (comparison -> PLUS comparison .)
    EQ              reduce using rule 38 (comparison -> PLUS comparison .)
    GT              reduce using rule 38 (comparison -> PLUS comparison .)
    RPAR            reduce using rule 38 (comparison -> PLUS comparison .)
    COMMA           reduce using rule 38 (comparison -> PLUS comparison .)
    ASSIGN          reduce using rule 38 (comparison -> PLUS comparison .)
    NEWLINE         reduce using rule 38 (comparison -> PLUS comparison .)
    SEMICOLON       reduce using rule 38 (comparison -> PLUS comparison .)
    COLON           reduce using rule 38 (comparison -> PLUS comparison .)
    MULT            shift and go to state 49
    DIV             shift and go to state 46
